syntax = "proto3";//版本

option java_multiple_files = true;
option java_package = "hz.lib";
option java_outer_classname = "DeviceFixProto";
option objc_class_prefix = "HLW";

package device;

// The device hz.service definition.
hz.service DeviceFixService {
    // Sends a message
    rpc insertDeviceFix (deviceFix) returns (booleanReply){}
    rpc updateDeviceFix (deviceFix) returns (booleanReply){}
    rpc searchDeviceFix (conditionsRequest) returns (deviceFix){}
    rpc deleteDeviceFix (conditionsRequest) returns (booleanReply){}
}


// The request message .
message conditionsRequest {
     string id = 1;
}
message deviceFix {
     string id=1;
     string serialNum=2;
     string userNum=3;
     int32  status=4;
     int32  type=5;
     string address=6;
     string createtime=7;
     string updatetime=8;
}

// The response message
message booleanReply {
    bool reply = 1;
}

// The response message
message objectReply {
    bool reply = 1;
}
